# EZ_pair_graph

./: DOCKER_README.md  Dockerfile  LICENSE.md  Makefile  README.md  README_proposal.md  clustered_line_plot.py  demo_ez_pair_graph.ipynb  docker-compose.yml  para_and_nonPara_plot.py  parallel_arrow_plot.py  pipeline.sh  pipeline_for_EZ_plot.sh  pipeline_for_parallel_arrow_plot.sh  preparation_1.pl  preparation_2.pl  preparation_2.py  pyproject.toml  synthetic_case_studies_notebook.ipynb  test_dataset.txt  test_dataset_n1000.txt  trapezoid_plot.py
EZ_pair_graph_for_github_src/ez_pair_graph/: _slopegraph.py  cli.py
src/ez_pair_graph/: __init__.py  _clustered_line_plot.py  _parallel_arrow_plot.py  _preparation_1.py  api.py  cli.py  demo_ez_pair_graph.ipynb  plotting.py  preparation.py
