[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-pair-graph"
version = "0.1.0"
description = "Scalable unified-axis visualization for summarizing large-scale paired data"
readme = "README.md"
license = {text = "Custom Academic License - See LICENSE.md"}
requires-python = ">=3.8"
authors = [
    {name = "Akihiro Ezoe", email = "akihiro.ezoe@riken.jp"},
    {name = "Motoaki Seki"},
    {name = "Keiichi Mochida"},
]
keywords = ["visualization", "paired-data", "statistics", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/010049nn/EZ_pair_graph"
Repository = "https://github.com/010049nn/EZ_pair_graph"

[project.scripts]
ez-pair-graph = "ez_pair_graph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
